Fixed broken branch-related elements
